// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 2 expenses totalling $2,345.67
  </h1>
</div>
`;

exports[`should render summary for single expense 1`] = `
<div>
  <h1>
    Viewing 1 expense totalling $1.23
  </h1>
</div>
`;
